--- a/pom.xml
+++ b/pom.xml
@@ -124,7 +124,7 @@
 
   <build>
     <plugins>
-      plugin>
+      <plugin>
     <artifactId>maven-war-plugin</artifactId>
     <configuration>
         <attachClasses>true</attachClasses>
