--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,7 @@ logging.level.org.springframework=INFO
 
 # Maximum time static resources should be cached
 spring.resources.cache.cachecontrol.max-age=12h
+
+server.port=9090
+server.use-forward-headers=true
+server.contextPath=/mainstay
