--- a/pom.xml
+++ b/pom.xml
@@ -5,11 +5,13 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.springframework.samples</groupId>
   <artifactId>spring-petclinic-2.4.5</artifactId>
+   <version>2.4.5</version>
   <packaging>war</packaging>
 
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
+    <version>2.4.5</version>
   </parent>
   <name>petclinic</name>
 
